--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -40,8 +40,7 @@ jobs:
           gcloud config list
       - name: Build
         run: |-
-          docker build \
-            --build-arg AUTH_SERVER_URL=$AUTH_SERVER_URL \
+          docker build \react-app
             .
 #
 #name: Build and Publish Acme Service
