--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -41,6 +41,7 @@ jobs:
       - name: Build
         run: |-
           docker build \react-app
+          --tag "gcr.io/gentle-presence-402608/test-test-frontend:latest" \
       # Push the Docker image to Google Container Registry
       - name: Publish
         run: |-
