--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -40,8 +40,10 @@ jobs:
           gcloud config list
       - name: Build
         run: |-
-          docker build \react-app
-          --tag "gcr.io/gentle-presence-402608/test-test-frontend:latest" \
+          docker build \
+            --tag "gcr.io/gentle-presence-402608/test-test-frontend:latest" \
+            .    
+
       # Push the Docker image to Google Container Registry
       - name: Publish
         run: |-
