--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -40,7 +40,7 @@ jobs:
           gcloud config list
       - name: Build
         run: |-
-          docker build \
+          docker build \react-app
             --tag "gcr.io/gentle-presence-402608/test-test-frontend:latest" \
 
       # Push the Docker image to Google Container Registry
