--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,7 +16,7 @@ jobs:
     permissions:
       contents: 'read' # These permissions are required by the workflow.
       id-token: 'write' # 3️⃣
-    uses: '3AP-AG/reusable-workflows/.github/workflows/build-push-image-to-gar.yml:latest'
+    uses: "3AP-AG/reusable-workflows/.github/workflows/publish-helm-chart.yml@6bd1057b17bc2b07c96b920fd9b7da2ae88ab3fb"
     with:
       docker_build_context: './src' # 5️⃣
       dockerfile_path: './react-app/Dockerfile'
