--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,8 +14,9 @@ jobs:
   publish-latest-image:
     name: "Build & Publish Acme Service"
     permissions:
-      contents: 'read' # These permissions are required by the workflow.
-      id-token: 'write' # 3️⃣
+      contents: "read"
+      id-token: "write"
+      packages: "write"
     uses: "3AP-AG/reusable-workflows/.github/workflows/publish-helm-chart.yml@6bd1057b17bc2b07c96b920fd9b7da2ae88ab3fb"
     with:
       docker_build_context: './src' # 5️⃣
