--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -91,7 +91,7 @@ jobs:
     permissions:
       contents: 'read' # These permissions are required by the workflow.
       id-token: 'write' # 3️⃣
-    uses: ./docker-build-push.yml
+    uses: "./docker-build-push.yml@6bd1057b17bc2b07c96b920fd9b7da2ae88ab3fb"
     with:
       docker_build_context: './src' # 5️⃣
       dockerfile_path: './react-app/Dockerfile'
