--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -96,6 +96,6 @@ jobs:
       build_context: './src' # 5️⃣
       dockerfile_path: './react-app/Dockerfile'
       image: 'gcr.io/gentle-presence-402608/test-test-frontend'
-      image_label_title: 'test-test-frontend'
+      label_title: 'test-test-frontend'
       gcp_auth_service_account: 'dalibor@gentle-presence-402608.iam.gserviceaccount.com'
       gcp_auth_workload_identity_provider: 'projects/999991794670/locations/global/workloadIdentityPools/github-actions-pool/providers/github-action'
