--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -15,8 +15,7 @@ on:
       # build args
       dockerfile_path:
         type: string
-        required: false
-        default: "./Dockerfile"
+        required: true
       build_context:
         type: string
         required: false
