--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -94,7 +94,7 @@ jobs:
     uses: "./.github/workflows/docker-build-push-to-gar.yml"
     with:
       docker_build_context: './src' # 5️⃣
-      dockerfile_path: './react-app/Dockerfile'
+      docker_dockerfile_path: './react-app/Dockerfile'
       docker_image: 'gcr.io/gentle-presence-402608/test-test-frontend'
       docker_label_title: 'test-test-frontend'
       docker_registry_domain: 'eu.gcr.io'
